# openclaw-memoria

./: .gitignore  README.md  openclaw.plugin.json  package.json  pyproject.toml
docs/: memoria-session-storybook.md
memoria/: cli.py  config.py  schema.py
memoria/api/: _model_types.py  database.py  dependencies.py  main.py  middleware.py  models.py
memoria/api/routers/: admin.py  auth.py  health.py  memory.py  snapshots.py  user_ops.py
memoria/core/: base.py  db_consumer.py  exceptions.py  git_for_data.py  llm.py  logging_config.py  scheduler.py  tiered_loader.py  validation.py
memoria/core/auth/: encryption.py
memoria/core/embedding/: __init__.py  client.py  providers.py
memoria/core/memory/: __init__.py  canonical_storage.py  config.py  editor.py  factory.py  interfaces.py  service.py  types.py
memoria/core/memory/graph/: __init__.py  activation.py  candidates.py  consolidation.py  types.py  (+6 more)
memoria/core/utils/: id_generator.py  similarity.py
memoria/mcp_cloud/: server.py
memoria/mcp_local/: __init__.py  __main__.py  messages.py  server.py
memoria/templates/: claude_rule.md  cursor_rule.md  kiro_steering.md
memoria/tests/: conftest.py  test_docker.py  test_e2e.py  test_incremental_governance.py  test_mcp.py  test_user_ops_cache.py
openclaw/: bridge.py  client.ts  config.ts  format.ts  index.ts
scripts/: install-openclaw-memoria.sh  uninstall-openclaw-memoria.sh  verify_capability_coverage.py  verify_embedded_memory.py  verify_openclaw_agent_ab.py  verify_plugin_install.py
skills/memoria-memory/: SKILL.md
skills/memoria-recovery/: SKILL.md
(+38 files in other folders)
